--- a/index.scss
+++ b/index.scss
@@ -8,7 +8,9 @@ $primary: white;
 
 body{
     background-color: $background;
-    font-family: Montserrat;
+    font-family: poppins;
+    padding-top: 20px;
+    padding-bottom: 20px;
 .mobile{
     display: block;
     border-top-left-radius: 10px;
@@ -22,7 +24,7 @@ body{
     margin-right: auto;
     margin-top: 5px;
     width: 500px;
-    height: 850px;
+    height: 870px;
 
     p:first-child{
         opacity: 0.7;
@@ -72,14 +74,14 @@ body{
     .icon{
         position: relative;
         left: -120px;
-        bottom: -59px;
+        bottom: -65px;
     }
 }
 }
 @media screen and (min-width: 375px){
     .main{display: block;}
     .desktop{display: none;}
-    @media screen and (min-width: 1440px){
+    @media screen and (min-width: 800px){
         .main{
             display: none;
         }
@@ -101,6 +103,7 @@ body{
             }
             .container{
                 padding-top: 55px;
+                margin-right: 10px;
                 p:first-child{
                     opacity: 0.7;
                     letter-spacing: 0.5em;
@@ -146,7 +149,7 @@ body{
                 .icon{
                     position: relative;
                     left: -185px;
-                    bottom: -94px;
+                    bottom: -100px;
                 }
             }
         }
