--- a/index.scss
+++ b/index.scss
@@ -8,7 +8,7 @@ $primary: white;
 
 body{
     background-color: $background;
-    font-family: poppins;
+    font-family: 'Poppins', sans-serif;
     padding-top: 20px;
     padding-bottom: 20px;
 .mobile{
